BlackJackTerminal_20210921-0735.log
BlackjackTerminal$ cc main.c bj_declare.h

bj_declare.h:91:39: error: too few arguments to function call, single argument 'Card' was not specified
    char ShuffledDeck = cardIntToChar();
                        ~~~~~~~~~~~~~ ^
bj_declare.h:59:1: note: 'cardIntToChar' declared here
char cardIntToChar (int Card)
^
1 error generated.
In file included from main.c:2:
./bj_declare.h:91:39: error: too few arguments to function call, single argument 'Card' was not specified
    char ShuffledDeck = cardIntToChar();
                        ~~~~~~~~~~~~~ ^
./bj_declare.h:59:1: note: 'cardIntToChar' declared here
char cardIntToChar (int Card)
^
1 error generated.
